Fix box shadow "overflows" cards at border radius

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,8 +28,12 @@
   display: block;
   position: relative;
   /* width: 180px; 
-  height: 270px;  
-  border: 1px solid #b9b9b9; */
+  height: 270px;  */
+  /* border: 1px solid #b9b9b9;  */
+  border-top-left-radius: 4% 4%;
+  border-top-right-radius: 4% 4%;
+  border-bottom-left-radius: 4% 4%;
+  border-bottom-right-radius: 4% 4%;
 }
 
 .card + .card {
